# newCpuRender

./: CMakeLists.txt  README.md  UI使用说明.docx  main.cpp  main.cpp~  说明文档.docx  读书报告docx.docx
IO/: ObjLoader.cpp  ObjLoader.h  tgaimage.cpp  tgaimage.h
cmake/: LidanBase.cmake  LidanStart.cmake
config/: config.h.in
datatype/: Model.h  Project.h  Vec.h  View.h  ViewPort.h  data.h  pipline.h
geom/: Line.cpp  Line.h  Point.h  triangle.cpp  triangle.h
render/: LTexture.cpp  LTexture.h  camera.cpp  camera.h  render.cpp  render.h  window.cpp  window.h
util/: BoundingBox.h  HierachyZBuffer.cpp  HierachyZBuffer.h  LoadData.cpp  LoadData.h  Octree.cpp  Octree.h  ScanlineZbuffer.cpp  ScanlineZbuffer.h  Timer.h  ZBuffer.cpp  ZBuffer.h  calculate.h  common.h  manipulation.cpp  manipulation.h
